<resources>
    <string name="app_name">Controle de Pecas - Bazar</string>
    <string name="tituloPagCadastro">Cadastro de Peças</string>
    <string name="vazio">" "</string>
    <string name="titulo_home">Listagem das peças</string>

    // Avisos de Erro
    <string name="erro_vazio_categoria">A Categoria não pode ser vazia!</string>
    <string name="erro_vazio_cor">A Cor não pode ser vazia!</string>
    <string name="erro_vazio_valorVenda">O valor de venda não pode ser vazia!</string>
    <string name="erro_vazio_vendedora">A escolha da vendedora não pode ser vazia!</string>
    <string name="erro_vazio_estado">O estado da peça não ser vazio!</string>

    // TextView
    <string name="vendedora">"Vendedora: "</string>
    <string name="estado">"Estado da peça: "</string>
    <string name="cor">"Cor: "</string>
    <string name="valor_venda">"Valor de venda: "</string>
    <string name="categoria">"Categoria: "</string>
    <string name="estampa">"Estampa: "</string>
    <string name="checkboxUsado">Usado</string>
    <string name="checkBoxNovo">Novo</string>
    <string name="sobre">Sobre</string>
    <string name="sobre_app">Aplicativo para controle particular de itens de bazar</string>
    <string name="autor">Autor: Laura Rorato Maciel Neubern Souza</string>

    // Botoes
    <string name="cadastrar">Cadastrar</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>


    // Mensagem TOAST
    <string name="mensagem_a_peca">"A peça "</string>
    <string name="mensagem_cadastro">Peça cadastrada!</string>
    <string name="mensagem_limpeza">Campos limpos!</string>
    <string name="foi_selecionada">\nfoi selecionada</string>
    <string name="foram_selecionados">" foram selecionados "</string>

    // Categorias
    <string name="acessorio">Acessorio</string>
    <string name="bolsa">Bolsa</string>
    <string name="calca">Calça</string>
    <string name="shortsaia">Shorts/Saia</string>
    <string name="camiseta">Camiseta/Cropped</string>
    <string name="casaco">Casaco</string>
    <string name="modapraia">Moda praia</string>
    <string name="calcado">Calçado</string>
    <string name="vestido">Vestido</string>
    <string name="sueter">Sueter</string>

    //Nomes
    <string name="laura_rorato">Laura Rorato</string>
    <string name="gabi_albanez">Gabi Albanez</string>
    <string name="mari_branco">Mari Branco</string>
    <string name="maria_engler">Maria Engler</string>
    <string name="duda_caldas">Duda Caldas</string>
    <string name="laura_cadore">Laura Cadore</string>
    <string name="isa_barp">Isabella Barp</string>
    <string name="rafa_konig">Rafa Konig</string>
    <string name="layal_hussein">Layal Hussein</string>
    <string name="nani">Nani</string>

    //Cores
    <string name="amarelo">Amarelo</string>
    <string name="azul">Azul</string>
    <string name="branco">Branco</string>
    <string name="laranja">Laranja</string>
    <string name="marrom">Marrom</string>
    <string name="preto">Preto</string>
    <string name="rosa">Rosa</string>
    <string name="roxo">Roxo</string>
    <string name="verde">Verde</string>
    <string name="vermelho">Vermelho</string>

    //Estampas
    <string name="animal_print">Animal print</string>
    <string name="etnica">Etnica</string>
    <string name="florido">Florido</string>
    <string name="listras">Listras</string>
    <string name="liso">Liso</string>
    <string name="poa">Poá</string>
    <string name="tie_dye">Tie dye</string>
    <string name="tweed">Tweed</string>
    <string name="xadrez">Xadrez</string>
    <string name="outra">Outra</string>
    <string name="adicionar">Adicionar</string>
    <string name="addPeca">Adicionar peça</string>
    <string name="editar">Editar\n</string>
    <string name="excluir">Excluir</string>
    <string name="nova_peca">Nova Peça</string>
    <string name="editar_peca">Editar Peça</string>

</resources>