<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewCategoria"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/categoria"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

        <Button
            android:id="@+id/buttonLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="limparCampos"
            android:text="@string/limpar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCadastrar" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/estampa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupCategorias" />

        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="cadastrar"
            android:text="@string/cadastrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextValorVenda" />

        <CheckBox
            android:id="@+id/checkBoxUsado"
            android:layout_width="91dp"
            android:layout_height="48dp"
            android:text="@string/checkboxUsado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/checkBoxNovo"
            app:layout_constraintTop_toTopOf="@+id/checkBoxNovo" />

        <CheckBox
            android:id="@+id/checkBoxNovo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/checkBoxNovo"
            app:layout_constraintEnd_toStartOf="@+id/checkBoxUsado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEstado" />

        <RadioGroup
            android:id="@+id/radioGroupCategorias"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/textViewCategoria"
            app:layout_constraintTop_toBottomOf="@+id/textViewCategoria">

            <RadioButton
                android:id="@+id/radioButtonAcessorio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acessorio" />

            <RadioButton
                android:id="@+id/radioButtonCalca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calca" />

            <RadioButton
                android:id="@+id/radioButtonShortSaia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shortsaia" />

            <RadioButton
                android:id="@+id/radioButtonCamiseta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camiseta" />

            <RadioButton
                android:id="@+id/radioButtonVestido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vestido" />

            <RadioButton
                android:id="@+id/radioButtonCasaco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/casaco" />

            <RadioButton
                android:id="@+id/radioButtonPraia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modapraia" />

            <RadioButton
                android:id="@+id/radioButtonCalcado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calcado" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tituloPagCadastro"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNome"
            android:layout_width="191dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/nome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text|textPersonName|textCapSentences"
            app:layout_constraintStart_toStartOf="@+id/textViewNome"
            app:layout_constraintTop_toBottomOf="@+id/textViewNome" />

        <TextView
            android:id="@+id/textViewEstado"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/estado"
            app:layout_constraintStart_toStartOf="@+id/textViewCor"
            app:layout_constraintTop_toBottomOf="@+id/autoCompleteCor" />

        <TextView
            android:id="@+id/textViewCor"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/cor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerEstampa" />

        <Spinner
            android:id="@+id/spinnerEstampa"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteCor"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/spinnerEstampa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCor" />

        <ListView
            android:id="@+id/listViewVendedoras"
            android:layout_width="0dp"
            android:layout_height="486dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLimpar"/>

        <TextView
            android:id="@+id/textViewValorVenda"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/valor_venda"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxNovo" />

        <EditText
            android:id="@+id/editTextValorVenda"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/autoCompleteCor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewValorVenda" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>